Estructura html + reduce

--- a/JS/index.html
+++ b/JS/index.html
@@ -9,8 +9,9 @@
 </head>
 <body>
     <div class="tituloHTML">
-    <h1>Este es mi simulador de JavaScript!</h1>
-    <h2>Brian Schmid</h2>
+    <h1>Pre entrega del proyecto final</h1>
+    <h2>Incorporar metodos sobre el array</h2>
+    <h3>Brian Schmid</h3>
     </div>
 
 
